--- a/goblet.cabal
+++ b/goblet.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Data.Game.Goblet.Board, Data.Game.Goblet.Goblet
+  exposed-modules:     Game.Goblet.Board, Game.Goblet.Game, Game.Goblet.DrawDiagrams
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
