--- a/goblet.cabal
+++ b/goblet.cabal
@@ -15,8 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Game.Goblet.Board, Game.Goblet.Game, Game.Goblet.DrawDiagrams
-  build-depends:       base >= 4.7 && < 5
+  exposed-modules:     Game.Goblet.Board, Game.Goblet.Game, Game.Goblet.Draw
+  build-depends:       base >= 4.7 && < 5, threepenny-gui >= 0.7, mtl > 2.0
   default-language:    Haskell2010
 
 executable goblet
