--- a/goblet.cabal
+++ b/goblet.cabal
@@ -16,7 +16,12 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Game.Goblet.Board, Game.Goblet.Game, Game.Goblet.Draw
-  build-depends:       base >= 4.7 && < 5, threepenny-gui >= 0.7, mtl > 2.0
+  build-depends:       base >= 4.7 && < 5
+                     , threepenny-gui >= 0.7
+                     , mtl >= 2.2
+                     , array >= 0.5.1.1
+                     , QuickCheck
+                     , prelude-safeenum
   default-language:    Haskell2010
 
 executable goblet
